--- a/about_us.css
+++ b/about_us.css
@@ -68,3 +68,18 @@ img {
   font-weight: 500;
   letter-spacing: 1px;
 }
+@media only screen and (max-width: 1400px) {
+  p.h2 {
+    font-size: 22px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  p.h2 {
+    font-size: 20px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  #cards {
+    flex-direction: column;
+  }
+}
